--- a/index.html
+++ b/index.html
@@ -91,25 +91,25 @@
                   </div>
                   <div class="skill-mf">
                     <p class="title-s">Skills</p>
-                    <span>HTML</span> <span class="pull-right">85%</span>
+                    <span>HTML</span> <span class="pull-right">80%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <span>CSS</span> <span class="pull-right">70%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Python</span> <span class="pull-right">60%</span>
+                    <span>Python</span> <span class="pull-right"0%>75%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width:60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width:75%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>JAVASCRIPT</span> <span class="pull-right">80%</span>
+                    <span>Java</span> <span class="pull-right">80%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Java</span> <span class="pull-right">75%</span>
+                    <span>C/CPP</span> <span class="pull-right">85%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
@@ -169,24 +169,6 @@
             <li>Innovative</li>
           </ul>
         </div><br>
-        <h4>EXPERIENCE</h4>
-        <div class="resume-item"><br>
-          <h5><b>Data Science And Business Analytics Intern |
-            September 2021</b></h5><br>
-          <h5>GRIP-The Sparks Foundations</h5><br>
-          <h6><li>Applied numerous concepts about Data science,<br>
-                Data visualization and Machine learning.<br><br></li>
-            <li>Language used: Python</li>
-            </h6><br>
-        </div>
-        <div class="resume-item">
-          <h5><b>Web Developer Intern | October 2021</b></h5><br>
-          <h5>Let's Grow More- Virtual Intership Program</h5><br>
-          <h6><li>Working with HTML,CSS and Javascript</li>
-        <h6><li>Web application Using React app</h6></li>
-        <h6><li>IDE used: Microsoft visual studio code</li></h6>
-        </h6><br>
-        </div>
 
         <h4>EDUCATION</h4>
         <div class="resume-item"><br>
@@ -210,6 +192,7 @@
             <li>A key organizer of the techno-cultural fest “REVIERA 2K19” in Don Bosco College kottiyam.</li>
             <li>Satisfactorily completed the two year programme (2017-2019)in the National Service Scheme(NSS) in Don Bosco
               College kottiyam</li>
+            <li>Secretary of IEDC SNIT Kollam(2021-2022)</li>
           </ul>
         </div>
         <div class="resume-item">
@@ -226,15 +209,6 @@
             <li>Certification of Cloud Computing :IIT Kharagpur(NPTEL)</li>
             <li>Introduction to R programming: Great Learning Academy</li>
             <li>Python for machine Learning: Great Learning Academy</li>
-          </ul>
-        </div>
-        <div class="resume-item">
-          <h4>ADVANCED TECHNOLOGIES</h4><br>
-          <ul>
-            <li>Machine Learning</li>
-            <li>Deep Learning</li>
-            <li>Comma Separated Value(CSV)</li>
-            <li>Web Designing</li>
           </ul>
         </div>
         <div class="resume-item">
@@ -323,7 +297,7 @@
                     <div class="socials"><br><br>
                       <ul>
                         <li><a href="https://www.facebook.com/kripa.krishnan.52206"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
-                        <li><a href="https://www.instagram.com/kripa244/"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
+                        <li><a href="https://www.instagram.com/_k.r.i.p.a__/"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
                         <li><a href="https://www.linkedin.com/in/kripa245/"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                       </ul>
                     </div>
